--- a/index.html
+++ b/index.html
@@ -70,21 +70,21 @@
     </div>
     <script>
         const facts = [
-            "Rohit Sharma is the only player to score three double centuries in One Day Internationals (ODIs).",
-            "India has won the ICC Cricket World Cup twice, in 1983 and 2011.",
-            "The highest individual score in ODIs is 400*, achieved by Rohit Sharma against Sri Lanka in 2014.",
-            "Sachin Tendulkar holds the record for the most runs in international cricket, with over 34,000 runs.",
-            "The Indian Premier League (IPL) is one of the richest and most popular T20 leagues in the world.",
-            "Rohit Sharma is the captain of the Indian national cricket team in limited-overs formats.",
-            "The first-ever Test match was played between England and Australia in 1877.",
-            "India has produced some of the greatest cricketers in history, including Kapil Dev, Sunil Gavaskar, and MS Dhoni.",
-            "Rohit Sharma has the highest number of centuries in T20 internationals, with over 30 centuries.",
-            "The 2007 ICC T20 World Cup was won by India, marking the beginning of T20 cricket's popularity.",
-            "Anil Kumble is India's highest wicket-taker in Test cricket, with 619 wickets.",
-            "The 2011 ICC Cricket World Cup final was held at Wankhede Stadium in Mumbai, where India defeated Sri Lanka.",
-            "Virat Kohli is known for his aggressive batting style and has numerous records in all formats of the game.",
-            "The famous 'Gully Cricket' is a popular form of cricket played in the streets and alleys of India.",
-            "MS Dhoni is the only captain to win all three ICC trophies: the T20 World Cup, the ODI World Cup, and the Champions Trophy."
+           "Rohit Sharma is the only player to score three double centuries in One Day Internationals (ODIs).",
+    "India has won the ICC Cricket World Cup twice, in 1983 and 2011.",
+    "The highest individual score in ODIs is 264, achieved by Rohit Sharma against Sri Lanka in 2014.",
+    "Sachin Tendulkar holds the record for the most runs in international cricket, with over 34,000 runs.",
+    "The Indian Premier League (IPL) is one of the richest and most popular T20 leagues in the world.",
+    "Rohit Sharma is the captain of the Indian national cricket team in limited-overs formats.",
+    "The first-ever Test match was played between England and Australia in 1877.",
+    "India has produced some of the greatest cricketers in history, including Kapil Dev, Sunil Gavaskar, and MS Dhoni.",
+    "Rohit Sharma has 5 centuries in T20 internationals.",
+    "The 2007 ICC T20 World Cup was won by India, marking the beginning of T20 cricket's popularity.",
+    "Anil Kumble is India's highest wicket-taker in Test cricket, with 619 wickets.",
+    "The 2011 ICC Cricket World Cup final was held at Wankhede Stadium in Mumbai, where India defeated Sri Lanka.",
+    "Virat Kohli is known for his aggressive batting style and has numerous records in all formats of the game.",
+    "The famous 'Gully Cricket' is a popular form of cricket played in the streets and alleys of India.",
+    "MS Dhoni is the only captain to win all three ICC trophies: the T20 World Cup, the ODI World Cup, and the Champions Trophy."
         ];
 
         const factElement = document.getElementById('fact');
